--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <link rel="stylesheet" href="css/hover-min.css" />
     <link rel="stylesheet" href="style.css" />
-    <title>Joy Dey | Front End Developer | MERN Developer</title>
+    <title>Joy Dey | MERN Developer</title>
   </head>
   <body data-spy="scroll" data-target="#navbar" data-offset="100">
     <div class="scrollTop" onclick="scrollToTop();"></div>
