--- a/index.html
+++ b/index.html
@@ -94,8 +94,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-6 col-sm-12 mt-5">
-                <div class="profile-img text-center">
-                </div>
+                <div class="profile-img text-center"></div>
               </div>
               <div class="col-md-6 col-sm-12 mt-5">
                 <div class="profile-content">
@@ -275,7 +274,7 @@
               <div class="skill-box">
                 <svg
                   class="radial-progress php"
-                  data-percentage="62"
+                  data-percentage="75"
                   viewBox="0 0 80 80"
                 >
                   <circle class="incomplete" cx="40" cy="40" r="35"></circle>
@@ -292,10 +291,10 @@
                     y="57%"
                     transform="matrix(0, 1, -1, 0, 80, 0)"
                   >
-                    62%
+                    75%
                   </text>
                 </svg>
-                <h3>php</h3>
+                <h3>React</h3>
               </div>
             </div>
             <div class="col-md-4 mt-5">
